# multi-agent-hotel-assistant

./: .gitignore  README.md
app/: pyproject.toml  requirements.txt  streamlit_app.py
app/scripts/: deploy.py  start_agents.sh
app/src/: __init__.py  main.py
app/src/agents/: __init__.py  base.py  guest_advisory.py  notification.py  reservation.py  run_agents.py  search_discovery.py
app/src/config/: settings.py
app/src/core/: __init__.py  memory.py  supervisor.py
app/src/utils/: __init__.py  auth.py  mcp_client.py
infrastructure/: package.json  pnpm-lock.yaml
infrastructure/lambda/guest-advisory-kb-handler/: index.ts
infrastructure/lambda/modify-reservation/: index.ts
infrastructure/lambda/query-reservations/: index.ts
infrastructure/lambda/room-reservation/: index.ts
infrastructure/lambda/search-hotel/: index.ts
infrastructure/lib/: infrastructure-stack.ts
infrastructure/lib/config/: index.ts
infrastructure/lib/constructs/ai/: agent.ts  knowledge-base.ts
infrastructure/lib/constructs/auth/: cognito.ts
infrastructure/lib/constructs/common/compute/: lambda-factory.ts
infrastructure/lib/constructs/compute/: lambda-functions.ts
infrastructure/lib/constructs/database/: dynamodb.ts
infrastructure/lib/constructs/outputs/: stack-outputs.ts
infrastructure/lib/constructs/security/: iam-roles.ts
